--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-2.11MB/s(Youtube:不良林), server: 134.195.198.95, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇸🇬 新加坡-9.06MB/s(Youtube:不良林), server: 139.162.4.68, port: 80, type: vmess, uuid: a8941bb8-19f8-43f7-ab52-1001d101a538, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 139.162.4.68}}
-  - {name: 🇨🇦 加拿大-1.81MB/s(Youtube:不良林), server: 134.195.198.95, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇳 中国-456.4KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇫🇷 法国-3.02MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
-  - {name: 🇨🇦 加拿大-3.03MB/s(Youtube:不良林), server: 134.195.196.149, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-437.4KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-1.66MB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-2.44MB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇦 加拿大-2.86MB/s(Youtube:不良林), server: 134.195.196.149, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-3.52MB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇦 加拿大-2.52MB/s(Youtube:不良林), server: 134.195.196.149, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇨🇦 加拿大-3.02MB/s(Youtube:不良林), server: 134.195.196.149, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
   - {name: 🇨🇦 加拿大-3.04MB/s(Youtube:不良林), server: 134.195.196.149, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇦 加拿大-1.50MB/s(Youtube:不良林), server: 134.195.196.149, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇦 加拿大-2.86MB/s(Youtube:不良林), server: 134.195.196.149, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇦 加拿大-2.86MB/s(Youtube:不良林) 2, server: 134.195.196.149, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-9.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-456.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-3.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-437.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.66MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林) 2
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-9.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-456.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-3.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-437.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.66MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林) 2
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-9.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-456.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-3.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-437.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.66MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林) 2
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-9.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-456.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-3.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-437.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.66MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林) 2
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-9.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-456.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-3.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-437.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.66MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林) 2
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-9.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-456.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-3.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-437.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.66MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林) 2
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-9.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-456.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-3.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-437.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.66MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林) 2
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
