--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-1.05MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-303.9KB/s(Youtube:不良林), server: ingress-i2.iivvppnn.info, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i2.iivvppnn.info}}
-  - {name: 🇬🇧 英国-2.41MB/s(Youtube:不良林), server: 88.80.189.108, port: 80, type: vmess, uuid: a8941bb8-19f8-43f7-ab52-1001d101a538, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 88.80.189.108}}
-  - {name: 🇨🇦 加拿大-1.40MB/s(Youtube:不良林), server: 134.195.198.95, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇦 加拿大-2.74MB/s(Youtube:不良林), server: 134.195.198.95, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-222.1KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
+  - {name: 🇨🇦 加拿大-2.53MB/s(Youtube:不良林), server: 134.195.196.149, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇫🇷 法国-1.83MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-1.49MB/s(Youtube:不良林), server: 172.99.188.71, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇸🇬 新加坡-228.5KB/s(Youtube:不良林), server: sg-04.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-04.licom.ml, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-2.52MB/s(Youtube:不良林), server: 134.195.196.149, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇦 加拿大-3.02MB/s(Youtube:不良林), server: 134.195.196.149, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇨🇦 加拿大-2.25MB/s(Youtube:不良林), server: 134.195.196.149, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
   - {name: 🇨🇦 加拿大-3.04MB/s(Youtube:不良林), server: 134.195.196.149, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇦 加拿大-1.50MB/s(Youtube:不良林), server: 134.195.196.149, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇨🇦 加拿大-2.59MB/s(Youtube:不良林), server: 134.195.196.149, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-303.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-228.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.59MB/s(Youtube:不良林)
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-303.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-228.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.59MB/s(Youtube:不良林)
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-303.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-228.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.59MB/s(Youtube:不良林)
@@ -72,13 +72,13 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-303.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-228.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.59MB/s(Youtube:不良林)
@@ -87,13 +87,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-303.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-228.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.59MB/s(Youtube:不良林)
@@ -103,13 +103,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-303.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-228.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.59MB/s(Youtube:不良林)
@@ -128,13 +128,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-303.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-228.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.59MB/s(Youtube:不良林)
