--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-222.1KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
   - {name: 🇨🇦 加拿大-2.53MB/s(Youtube:不良林), server: 134.195.196.149, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇫🇷 法国-1.83MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-1.49MB/s(Youtube:不良林), server: 172.99.188.71, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇸🇬 新加坡-228.5KB/s(Youtube:不良林), server: sg-04.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-04.licom.ml, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-2.05MB/s(Youtube:不良林), server: 193.108.117.75, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇦 加拿大-1.31MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-2.60MB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇦 加拿大-1.68MB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-2.52MB/s(Youtube:不良林), server: 134.195.196.149, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇨🇦 加拿大-2.25MB/s(Youtube:不良林), server: 134.195.196.149, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
   - {name: 🇨🇦 加拿大-3.04MB/s(Youtube:不良林), server: 134.195.196.149, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-222.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-228.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.31MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.68MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-222.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-228.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.31MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.68MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-222.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-228.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.31MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.68MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-222.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-228.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.31MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.68MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-222.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-228.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.31MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.68MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-222.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-228.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.31MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.68MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-222.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-228.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.31MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.68MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
