--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-2.53MB/s(Youtube:不良林), server: 134.195.196.149, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇩🇪 德国-2.05MB/s(Youtube:不良林), server: 193.108.117.75, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇦 加拿大-1.31MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-2.60MB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇦 加拿大-1.68MB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-2.21MB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-3.17MB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇦 加拿大-1.85MB/s(Youtube:不良林), server: 134.195.198.95, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇦 加拿大-1.34MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇬🇧 英国-2.00MB/s(Youtube:不良林), server: 88.80.189.108, port: 80, type: vmess, uuid: a8941bb8-19f8-43f7-ab52-1001d101a538, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 88.80.189.108}}
   - {name: 🇨🇦 加拿大-2.52MB/s(Youtube:不良林), server: 134.195.196.149, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇨🇦 加拿大-2.25MB/s(Youtube:不良林), server: 134.195.196.149, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
   - {name: 🇨🇦 加拿大-3.04MB/s(Youtube:不良林), server: 134.195.196.149, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-1.50MB/s(Youtube:不良林), server: 134.195.196.149, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇦 加拿大-2.59MB/s(Youtube:不良林), server: 134.195.196.149, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇦 加拿大-1.78MB/s(Youtube:不良林), server: 134.195.196.149, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇦 加拿大-2.10MB/s(Youtube:不良林), server: 134.195.196.149, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.60MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.78MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.60MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.78MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.60MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.78MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.60MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.78MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.60MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.78MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.60MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.78MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.60MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.78MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
